--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="ru">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио Юлии Карпец</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    background: url('images/plastic-texture.jpg') no-repeat center;
 </head>
 <body>
     <header class="hero">
