--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 <div class="buttons">
                     <a href="#projects" class="button gold">Проекты</a>
                     <a href="#contact" class="button green">
+                        <a href="#projects" class="button gold">Проекты</a>
+
                         <span class="symbol">JK</span> Контакты
                     </a>
                 </div>
